--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <body>
-    <h1>DoomLab FPS</h1>
-    <script src='https://cdn.socket.io/4.7.2/socket.io.min.js'></script>
-    <script src='./net.js'></script>
-    <script src='./game.js'></script>
+    <h1>DoomLab – Ping Test</h1>
+
+    <!-- Socket.IO client from CDN -->
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script src="./net.js"></script>
   </body>
 </html>
